src/validation/snapshots/rusty__validation__variable__variable_validator_tests__validate_enum_variant_initializer.snap
---
source: src/validation/variable.rs
expression: diagnostics
---
error[E040]: Assigned value is not a variant of main.y
  ┌─ <internal>:7:63
  │
7 │                 y : (metallic := 1, matte := 2, neon := 3) := red; // error
  │                                                               ^^^ Assigned value is not a variant of main.y

error[E040]: Assigned value is not a variant of main.var1
   ┌─ <internal>:10:55
   │
10 │                 var1 : (x1 := 1, x2 := 2, x3 := 3) := yellow; // error
   │                                                       ^^^^^^ Assigned value is not a variant of main.var1

error[E040]: Assigned value is not a variant of main.var2
   ┌─ <internal>:11:40
   │
11 │                 var2 : (x5, x6, x7) := neon; // error
   │                                        ^^^^ Assigned value is not a variant of main.var2

error[E040]: Assigned value is not a variant of main.var3
   ┌─ <internal>:12:37
   │
12 │                 var3 : (a, b, c) := 7; // error
   │                                     ^ Assigned value is not a variant of main.var3

error[E040]: Assigned value is not a variant of x
  ┌─ <internal>:2:45
  │
2 │                 x : (red, yellow, green) := 2; // error
  │                                             ^ Assigned value is not a variant of x


